# privacy-preserving-ml

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
configs/commitments/: fl_config.yaml  security_config.yaml
configs/hybrid/: he_config.py  model_config.py
configs/robust/: fl_config.yaml
configs/zkp/: zkp_config.yaml
docs/encrypted_gbdt/: privacy_analysis.md  results.md
docs/he_ml_readme/: README.md
docs/hybrid/: ARCHITECTURE.md  BASELINE_RESULTS.md  BENCHMARK_RESULTS.md  SECURITY_ANALYSIS.md  TEST_RESULTS.md
docs/tee/: USER_GUIDE.md
examples/commitments/: simple_demo.py
examples/hybrid/: baseline_comparison.py  hybrid_inference_demo.py
examples/robust/: robust_verifiable_fl_demo.py
examples/tee/: basic_usage.py  benchmarking_example.py  ht2ml_workflow.py  simple_enclave.py
examples/zkp/: fl_verification_demo.py  range_proof_demo.py  simple_commitment.py
experiments/commitments/: analyze_results.py  run_attacks.py  run_baselines.py  run_verifiable_fl.py
experiments/encrypted_gbdt/: benchmark.py  run_baseline.py  run_guard_gbdt.py
experiments/hybrid/: __init__.py  performance_benchmark.py  run_benchmarks.py  simple_benchmark.py
notebooks/: 01-homomorphic-encryption.ipynb  02-tee-simulation.ipynb  03-hybrid-he-tee.ipynb  04-zk-snarks.ipynb  05-commitment-schemes.ipynb  06-encrypted-gbdt.ipynb  README.md
shared_utils/: __init__.py  errors.py  types.py  validation.py
src/: __init__.py
tee_ml/: __init__.py
tests/: test_core.py  test_public_surfaces.py
(+223 files in other folders)
