[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-preserving-ml"
version = "0.1.0"
description = "Privacy and cryptography toolkit for phishing-oriented ML workloads."
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
